Removed the URLShouldBeInHistory function to resolve bug 29604.  DocShell now properly calls only when it should to add a page to history.